# agent-conditioning

./: .gitignore  README.md  dev-start.sh  pyproject.toml
agent/: conductor.py  config.yaml  exploration-score.yaml  exploration.py  mcp_search_server.py  orchestrator.py
agent/templates/: framework-template.md  operating-protocol-template.md  session-summary-template.md
docs/: future-work.md  interact-allowedtools-testing.md  plan-claude-oauth.md  plan-overview.md  plan-stage1-onboarding.md  plan-stage2-vms.md  plan-stage3-frontend.md  plan-stage4-backend.md  plan-stage5-tiers.md  plan-stage6-polish.md  plan-stage7-scaling.md  plan-vm-comparison.md  reporter-field-formatting.md  tiers.md  vm-deploy-keys.md  vm-requirements.md  vm-setup-guide.md  vm-transfer-guide.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/explore/: page.tsx
frontend/app/interact/: page.tsx
frontend/components/: ContentViewer.tsx  Controls.tsx  FileTree.tsx  MarkdownViewer.tsx  NavTabs.tsx  SessionList.tsx  StatusBar.tsx
frontend/lib/: api.ts  hooks.ts  interact-context.tsx  turnstile.d.ts  types.ts
platform/: .env.example  pyproject.toml
platform/explorer_platform/: app.py  auth.py  config.py  crypto.py  db.py  deps.py  email_verify.py  explore.py  gcp.py  idle.py  interact.py  log.py  onboard.py  provision.py  proxy.py  share.py  tiers.py  vm_client.py
platform/tests/: conftest.py  test_auth.py  test_onboard.py  test_stage2.py
platform/vm_agent/: agent.py
platform/vm_setup/: install.sh  vm-startup.sh
(+4 files in other folders)
