[project]
name = "agent-conditioning"
version = "0.1.0"
description = "Configurable conditioning layer for LLM agents — philosophy, framework, and operating protocol driven by a single config file"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "auto-compact",
]

[project.scripts]
agent-conditioning = "agent.orchestrator:main"
agent-conductor = "agent.conductor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.hatch.build.targets.wheel.force-include]
"agent/templates" = "agent/templates"
"agent/config.yaml" = "agent/config.yaml"

[tool.uv.sources]
auto-compact = { path = "../auto-compact", editable = true }
