[project]
name = "agent-explorer-platform"
version = "0.1.0"
description = "Backend API for Agent Explorer multi-user platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "bcrypt>=4.0",
    "cryptography>=44.0",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "google-cloud-compute>=1.19",
]

[project.scripts]
platform-server = "explorer_platform.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["explorer_platform"]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]
